# tietie

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: check.yml  release.yml
design/: mockup.html
src/: App.tsx  TrayPopover.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  db.rs  lib.rs  main.rs  paste.rs
