[package]
name = "tietie"
version = "0.1.0"
description = "贴贴 — 漂亮、轻量、跨平台的剪切板管理器"
authors = ["wangxiuwen"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tietie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-opener = "2.2"
tauri-plugin-autostart = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
url = "2"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
once_cell = "1"
arboard = "3"
sha2 = "0.10"
png = "0.17"
open = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
